webapp/channels/src/components/advanced_text_editor/help_button/help_button.scss
// Copyright (c) 2015-present Mattermost, Inc. All Rights Reserved.
// See LICENSE.txt for license information.

.HelpButton {
    display: flex;
    height: 20px;
    justify-content: flex-end;

    &__link {
        padding: 0;
        border: none;
        background: none;
        color: rgba(var(--center-channel-color-rgb), 0.75);
        cursor: pointer;
        font-size: 12px;
        text-decoration: none;

        &:hover {
            color: var(--button-bg);
            text-decoration: underline;
        }

        &:focus {
            outline: none;
        }
    }
}

